# PathTracer---Student-Version

./: CMakeLists.txt  instructions.md  run-all.ps1
src/: aabb.cpp  aabb.hpp  backgrounds.cpp  backgrounds.hpp  bvh.cpp  bvh.hpp  camera.cpp  camera.hpp  color.hpp  image.cpp  image.hpp  main.cpp  material.cpp  material.hpp  pathtracer.cpp  pathtracer.hpp  ray.hpp  scene.cpp  scene.hpp  scene_setup.cpp  scene_setup.hpp  shapes.cpp  shapes.hpp
